@@ -6199,15 +6199,39 @@ comment|// find the leader for the shard
 name|Replica
 name|parentShardLeader
 init|=
-name|clusterState
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|parentShardLeader
+operator|=
+name|zkStateReader
 operator|.
-name|getLeader
+name|getLeaderRetry
 argument_list|(
 name|collectionName
 argument_list|,
 name|slice
+argument_list|,
+literal|10000
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+block|}
 name|DocRouter
 operator|.
 name|Range
